[package]
name = "stream_multiplexer"
version = "0.15.0"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

categories = ["asynchronous", "network-programming"]
description = "Combines many streams into a few."
documentation = "https://docs.rs/stream_multiplexer"
keywords      = ["async", "asynchronous", "multiplex", "stream", "tokio"]
readme = "README.md"
repository    = "https://github.com/halzy/stream_multiplexer"

[dependencies]
async-channel = "1.4.0"
async-mutex = "1.1.5"
dashmap = "4.0.0-rc6"
futures-util = { version = "0.3.5", default-features = false, features=["std","async-await-macro","sink","alloc"] }
log = "0.4.11"
parking_lot = "0.11.0"
pin-project-lite = "0.1.7"
sharded-slab = "0.0.9"
thiserror = "1.0.20"

[dev-dependencies]
alto_logger = "0.3.6"
async-io = "0.1.9"
futures-util = { version = "0.3.5", default-features = false, features=["io","std"] }
pin-project-lite = "0.1.7"
smol = "0.3.3"
tokio-util = { version = "0.3.1", default-features = false, features=["codec","compat"] }
