[package]
name = "stream_multiplexer"
version = "0.16.1"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

categories = ["asynchronous", "network-programming"]
description = "Combines many streams into a few."
documentation = "https://docs.rs/stream_multiplexer"
keywords      = ["async", "asynchronous", "multiplex", "stream", "futures"]
readme = "README.md"
repository    = "https://github.com/halzy/stream_multiplexer"

[dependencies]
async-channel = "1.4.0"
atomic-waker = "1.0.0"
futures-lite = "0.1.10"
log = "0.4.11"
smol = "0.3.3"

[dev-dependencies]
#alto_logger = "0.3.6"
#async-io = "0.1.9"
#futures = { version = "0.3.5", default-features = false, features=["io","std","channel"] }
#pin-project-lite = "0.1.7"
#smol = "0.3.3"
