[package]
name = "stream_multiplexer"
version = "0.16.1"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

categories = ["asynchronous", "network-programming"]
description = "Combines many streams into a few."
documentation = "https://docs.rs/stream_multiplexer"
keywords      = ["async", "asynchronous", "multiplex", "stream", "futures"]
readme = "README.md"
repository    = "https://github.com/halzy/stream_multiplexer"

[dependencies]
async-channel = "1.4.0"
async-executor = { version = "0.1.2", default-features = false }
atomic-waker = "1.0.0"
futures-lite = { version = "0.1.11", default-features = false }
legasea_awaken = { git = "https://git.sr.ht/~halzy/legasea_awaken" }
legasea_eject = { git = "https://git.sr.ht/~halzy/legasea_eject" }

[dev-dependencies]
alto_logger = "0.3.7"
async-executor = { version = "0.1.2", default-features = false }
async-io = "0.1.11"
futures-util = { version = "0.3.5", default-features = false, features = ["io","std","channel","sink","async-await-macro"] }
log = "0.4.11"
pin-project-lite = "0.1.7"
