[package]
name = "tcp_streams"
version = "0.1.0"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { path = "../metrics" }

futures = "0.3.1"
tokio = { version = "0.2.10", features = ["full", "test-util"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
tracing = { version = "0.1.11", features = ["log"] }
byteorder = "1.3.2"
bytes = "0.5.4"
