[package]
name = "tcp_streams"
version = "0.1.0"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { path = "../metrics" }

futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
tracing = { version = "0.1", features = ["log"] }
byteorder = "1.3"
bytes = "0.5"
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "0.2", features = ["full", "test-util"] }
matches = "0.1"
tracing-subscriber = "0.2"
